force-app/main/default/objects/Activity/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>RelatedTasks</relationshipName>
    <type>Lookup</type>
</CustomField>