force-app/main/default/objects/Activity/fields/Acquisition_Form_Completed__c.field-meta.xml
<CustomField>
    <fullName>Acquisition_Form_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Acquisition Form Completed</label>
    <type>Checkbox</type>
</CustomField>