force-app/main/default/objects/Activity/fields/Annual_Salary__c.field-meta.xml
<CustomField>
    <fullName>Annual_Salary__c</fullName>
    <label>Annual Salary</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>