force-app/main/default/objects/Activity/fields/BK_Check_Attempts__c.field-meta.xml
<CustomField>
    <fullName>BK_Check_Attempts__c</fullName>
    <defaultValue>0</defaultValue>
    <label>BK Check Attempts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>