force-app/main/default/objects/Activity/fields/BK_Check_Outcome__c.field-meta.xml
<CustomField>
    <fullName>BK_Check_Outcome__c</fullName>
    <label>BK Check Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Unusable</fullName>
            </value>
            <value>
                <fullName>Decent</fullName>
            </value>
            <value>
                <fullName>Great</fullName>
            </value>
            <value>
                <fullName>Missing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>