force-app/main/default/objects/Activity/fields/BK_Email__c.field-meta.xml
<CustomField>
    <fullName>BK_Email__c</fullName>
    <label>BK Email</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Email_Sending</valueSetName>
    </valueSet>
</CustomField>