force-app/main/default/objects/Activity/fields/Books_Bank_Reconcile__c.field-meta.xml
<CustomField>
    <fullName>Books_Bank_Reconcile__c</fullName>
    <label>Books/Bank Reconcile?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>