force-app/main/default/objects/Activity/fields/Categorization_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Categorization_Outcome__c</fullName>
    <label>Categorization Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All Categorized</fullName>
            </value>
            <value>
                <fullName>Timing Issue</fullName>
            </value>
            <value>
                <fullName>Missing information</fullName>
            </value>
            <value>
                <fullName>Bank Syncing Issue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>