force-app/main/default/objects/Activity/fields/Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>Complete_Date__c</fullName>
    <description>When a task is completed</description>
    <formula>CompletedDateTime</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Complete Date</label>
    <type>DateTime</type>
</CustomField>