force-app/main/default/objects/Activity/fields/Completed__c.field-meta.xml
<CustomField>
    <fullName>Completed__c</fullName>
    <formula>IF( 
   AND( 
        DATEVALUE(Complete_Date__c)  &gt;= ActivityDate, 
        ISPICKVAL(Status, &quot;Completed&quot;) 
       ), 
&quot;On Time&quot;,
&quot;Complete Late&quot;
)</formula>
    <label>Completed</label>
    <type>Text</type>
</CustomField>