force-app/main/default/objects/Activity/fields/Confirmed_Call_Date__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_Call_Date__c</fullName>
    <label>Confirmed Call Date</label>
    <type>Date</type>
</CustomField>