force-app/main/default/objects/Activity/fields/Current_Opp_Stage__c.field-meta.xml
<CustomField>
    <fullName>Current_Opp_Stage__c</fullName>
    <formula>IF(
ISNULL( Opportunity__c ),
&quot;No Opportunity&quot;,
TEXT(Opportunity__r.StageName )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Opp Stage</label>
    <type>Text</type>
</CustomField>