force-app/main/default/objects/Activity/fields/EIN__c.field-meta.xml
<CustomField>
    <fullName>EIN__c</fullName>
    <formula>IF(
NOT(ISNULL(Account__c)),
Account__r.EIN__c,
NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EIN</label>
    <type>Text</type>
</CustomField>