force-app/main/default/objects/Activity/fields/EIN_Filing_Outcome__c.field-meta.xml
<CustomField>
    <fullName>EIN_Filing_Outcome__c</fullName>
    <label>EIN Filing Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Disapproved - Wrong Information</fullName>
            </value>
            <value>
                <fullName>Disapproved - Previous EIN Application</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>