force-app/main/default/objects/Activity/fields/Entity_Number__c.field-meta.xml
<CustomField>
    <fullName>Entity_Number__c</fullName>
    <formula>IF(
NOT(ISNULL(Account__c)),
Account__r.Entity_Number__c,
NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Entity Number</label>
    <type>Text</type>
</CustomField>