force-app/main/default/objects/Activity/fields/Establishment_Date__c.field-meta.xml
<CustomField>
    <fullName>Establishment_Date__c</fullName>
    <formula>IF(
NOT(ISNULL(Account__c)),
Account__r.Establishment_Date__c,
NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Establishment Date</label>
    <type>Date</type>
</CustomField>