force-app/main/default/objects/Activity/fields/Extension_Needed__c.field-meta.xml
<CustomField>
    <fullName>Extension_Needed__c</fullName>
    <label>Extension Needed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>