force-app/main/default/objects/Activity/fields/Gong__Gong_Selected_Process__c.field-meta.xml
<CustomField>
    <fullName>Gong__Gong_Selected_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gong Selected Process</label>
    <type>Checkbox</type>
</CustomField>