force-app/main/default/objects/Activity/fields/Intro_Call_Skipped__c.field-meta.xml
<CustomField>
    <fullName>Intro_Call_Skipped__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Intro Call Skipped</label>
    <type>Checkbox</type>
</CustomField>