force-app/main/default/objects/Activity/fields/Intuit_ESignature_Status__c.field-meta.xml
<CustomField>
    <fullName>Intuit_ESignature_Status__c</fullName>
    <label>Intuit ESignature Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Sent</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>