force-app/main/default/objects/Activity/fields/Last_BK_Check__c.field-meta.xml
<CustomField>
    <fullName>Last_BK_Check__c</fullName>
    <formula>IF(
 TEXT(Opportunity__r.Last_BK_Check_Outcome__c) =&quot;&quot;,&quot;&quot;,TEXT(Opportunity__r.Last_BK_Check_Outcome__c)
)</formula>
    <label>Last BK Check</label>
    <type>Text</type>
</CustomField>