force-app/main/default/objects/Activity/fields/Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source__c</fullName>
    <label>Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Facebook / Instagram AD</fullName>
            </value>
            <value>
                <fullName>Google Search</fullName>
            </value>
            <value>
                <fullName>Current Member</fullName>
            </value>
            <value>
                <fullName>Financial Advisor/CPA</fullName>
            </value>
            <value>
                <fullName>Word of Mouth</fullName>
            </value>
            <value>
                <fullName>Webinar</fullName>
            </value>
            <value>
                <fullName>LinkedIn</fullName>
            </value>
            <value>
                <fullName>Gusto</fullName>
            </value>
            <value>
                <fullName>Blog post</fullName>
            </value>
            <value>
                <fullName>Pinterest</fullName>
            </value>
            <value>
                <fullName>Online Group (see notes)</fullName>
            </value>
            <value>
                <fullName>Other (see notes)</fullName>
            </value>
            <value>
                <fullName>TikTok</fullName>
            </value>
            <value>
                <fullName>FinCon22</fullName>
            </value>
            <value>
                <fullName>Outbound</fullName>
            </value>
            <value>
                <fullName>Billboard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>