force-app/main/default/objects/Activity/fields/LLC_Filing_Status__c.field-meta.xml
<CustomField>
    <fullName>LLC_Filing_Status__c</fullName>
    <label>LLC Filing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Disapproved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>