force-app/main/default/objects/Activity/fields/LLC_Info_Status__c.field-meta.xml
<CustomField>
    <fullName>LLC_Info_Status__c</fullName>
    <label>LLC Info Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Needs Additional Info</fullName>
            </value>
            <value>
                <fullName>Info Complete - No Updates</fullName>
            </value>
            <value>
                <fullName>Info Complete - Only DB Updates</fullName>
            </value>
            <value>
                <fullName>Info Complete - Only File Updates</fullName>
            </value>
            <value>
                <fullName>Info Complete -DB &amp; File Updates</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>