force-app/main/default/objects/Activity/fields/Member_Notes__c.field-meta.xml
<CustomField>
    <fullName>Member_Notes__c</fullName>
    <formula>Opportunity__r.Member_Notes__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Member Notes</label>
    <type>Text</type>
</CustomField>