force-app/main/default/objects/Activity/fields/Offboarding_Date__c.field-meta.xml
<CustomField>
    <fullName>Offboarding_Date__c</fullName>
    <label>Offboarding Date</label>
    <type>Date</type>
</CustomField>