force-app/main/default/objects/Activity/fields/Offer_BK_Plan__c.field-meta.xml
<CustomField>
    <fullName>Offer_BK_Plan__c</fullName>
    <label>Offer BK Plan?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Recently Offered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>