force-app/main/default/objects/Activity/fields/Opp_Tax_Status__c.field-meta.xml
<CustomField>
    <fullName>Opp_Tax_Status__c</fullName>
    <formula>IF(
ISNULL( Opportunity__c ),
&quot;&quot;,
TEXT(Opportunity__r.Tax_Return_Status__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opp Tax Status</label>
    <type>Text</type>
</CustomField>