force-app/main/default/objects/Activity/fields/Payroll_Migration_Completed__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Migration_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Works together with the Payroll Migration Needed? field - created for ON-79 by Uile Miranda</description>
    <label>Payroll Migration Completed?</label>
    <type>Checkbox</type>
</CustomField>