force-app/main/default/objects/Activity/fields/Payroll_Migration_Needed__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Migration_Needed__c</fullName>
    <description>Created for Tracker Alpha project - ON-79 by Uile Miranda</description>
    <label>Payroll Migration Needed?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>