force-app/main/default/objects/Activity/fields/Plan__c.field-meta.xml
<CustomField>
    <fullName>Plan__c</fullName>
    <label>Plan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SP -&gt; SC</fullName>
            </value>
            <value>
                <fullName>LLC -&gt; SC</fullName>
            </value>
            <value>
                <fullName>Remain SC</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
            <value>
                <fullName>Remain C-Corp SC</fullName>
            </value>
            <value>
                <fullName>C-Corp</fullName>
                <isActive>false</isActive>
                <label>C-Corp</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>