force-app/main/default/objects/Activity/fields/Priority_Status__c.field-meta.xml
<CustomField>
    <fullName>Priority_Status__c</fullName>
    <label>Priority Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>