force-app/main/default/objects/Activity/fields/Problem_they_re_looking_to_solve__c.field-meta.xml
<CustomField>
    <fullName>Problem_they_re_looking_to_solve__c</fullName>
    <label>Problem they’re looking to solve</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>S-Corp Formation</fullName>
            </value>
            <value>
                <fullName>Tax Savings</fullName>
            </value>
            <value>
                <fullName>Bookkeeping</fullName>
            </value>
            <value>
                <fullName>Tax Return Filing</fullName>
            </value>
            <value>
                <fullName>Other (see notes)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>