force-app/main/default/objects/Activity/fields/Profession__c.field-meta.xml
<CustomField>
    <fullName>Profession__c</fullName>
    <description>Prospect-stated business</description>
    <inlineHelpText>Prospect-stated business</inlineHelpText>
    <label>Profession</label>
    <length>255</length>
    <type>Text</type>
</CustomField>