force-app/main/default/objects/Activity/fields/Quarterly_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Quarterly_Estimate__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Quarterly Estimate (Federal)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>