force-app/main/default/objects/Activity/fields/Quarterly_Estimate_State__c.field-meta.xml
<CustomField>
    <fullName>Quarterly_Estimate_State__c</fullName>
    <label>Quarterly Estimate (State)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>