force-app/main/default/objects/Activity/fields/Questionaire_Details__c.field-meta.xml
<CustomField>
    <fullName>Questionaire_Details__c</fullName>
    <formula>Account__r.Questionnaire_Details__c</formula>
    <label>Questionaire Details</label>
    <type>Text</type>
</CustomField>