force-app/main/default/objects/Activity/fields/Reconciliation_Discrepancy__c.field-meta.xml
<CustomField>
    <fullName>Reconciliation_Discrepancy__c</fullName>
    <label>Reconciliation Discrepancy</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>