force-app/main/default/objects/Activity/fields/Registered_Agent__c.field-meta.xml
<CustomField>
    <fullName>Registered_Agent__c</fullName>
    <formula>IF(
NOT(ISNULL(Account__c)),
TEXT(Account__r.Registered_Agent__c),
NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Registered Agent</label>
    <type>Text</type>
</CustomField>