force-app/main/default/objects/Activity/fields/Remediation_Email__c.field-meta.xml
<CustomField>
    <fullName>Remediation_Email__c</fullName>
    <label>Remediation Email</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Sent</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>