force-app/main/default/objects/Activity/fields/Remediation_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Remediation_Outcome__c</fullName>
    <label>Remediation Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Resolved</fullName>
            </value>
            <value>
                <fullName>Offboard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>