force-app/main/default/objects/Activity/fields/Remediation_Override__c.field-meta.xml
<CustomField>
    <fullName>Remediation_Override__c</fullName>
    <formula>IF( CONTAINS(Subject , &quot;Categorize Transactions&quot;),&quot;Yes&quot;,&quot;&quot;)</formula>
    <label>Remediation Override</label>
    <type>Text</type>
</CustomField>