force-app/main/default/objects/Activity/fields/Remediation_Status__c.field-meta.xml
<CustomField>
    <fullName>Remediation_Status__c</fullName>
    <formula>TEXT(Opportunity__r.Remediation_Status__c)</formula>
    <label>Remediation Status</label>
    <type>Text</type>
</CustomField>