force-app/main/default/objects/Activity/fields/Reporting_Task_Completion__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Task_Completion__c</fullName>
    <formula>IF(ISPICKVAL(Status, &quot;Completed&quot;) , 

IF(ActivityDate &gt;= DATEVALUE(Complete_Date__c), &quot;On Time&quot;, &quot;Overdue&quot;), 

&quot;&quot;)</formula>
    <label>Reporting - Task Completion</label>
    <type>Text</type>
</CustomField>