force-app/main/default/objects/Activity/fields/Reporting_Task_Status__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Task_Status__c</fullName>
    <description>Returns the status of a task as either Open, Open and Overdue, Closed Today or Closed)</description>
    <formula>IF(
	AND(
		ActivityDate &lt; TODAY(),
		ISPICKVAL(Status, &quot;Open&quot;)
	), 
	&quot;Overdue&quot;, 
  	IF(
  		AND(
     		ActivityDate &gt;= TODAY(),
     		ISPICKVAL(Status, &quot;Open&quot;)
     	), 
		&quot;Open&quot;,
		IF(
	  		AND(
			     DATEVALUE(Complete_Date__c) = TODAY(),
			     ISPICKVAL(Status, &quot;Completed&quot;)
			), 
			&quot;Completed Today&quot;,
			&quot;Closed&quot;)
	)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reporting - Task Status</label>
    <type>Text</type>
</CustomField>