force-app/main/default/objects/Activity/fields/Return_in_Dropbox__c.field-meta.xml
<CustomField>
    <fullName>Return_in_Dropbox__c</fullName>
    <label>Return in Dropbox</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Saved</fullName>
            </value>
            <value>
                <fullName>Saved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>