force-app/main/default/objects/Activity/fields/Return_Summary_Status__c.field-meta.xml
<CustomField>
    <fullName>Return_Summary_Status__c</fullName>
    <label>Return Summary Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Sent</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>