force-app/main/default/objects/Activity/fields/Send_Onboarding_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_Onboarding_Email__c</fullName>
    <label>Send Onboarding Email</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Sent</fullName>
                <default>true</default>
                <label>Not Sent</label>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>