force-app/main/default/objects/Activity/fields/Services__c.field-meta.xml
<CustomField>
    <fullName>Services__c</fullName>
    <formula>IF(CONTAINS(Account__r.Services__c,&quot;other&quot;),
 Account__r.Service_Type_Other__c,
Account__r.Services__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Services</label>
    <type>Text</type>
</CustomField>