force-app/main/default/objects/Activity/fields/Sortable_Date__c.field-meta.xml
<CustomField>
    <fullName>Sortable_Date__c</fullName>
    <label>Sortable Date</label>
    <length>100</length>
    <type>Text</type>
</CustomField>