force-app/main/default/objects/Activity/fields/Tax_Return_Needed__c.field-meta.xml
<CustomField>
    <fullName>Tax_Return_Needed__c</fullName>
    <label>Tax Return Needed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Needed</fullName>
            </value>
            <value>
                <fullName>Yes, Skip BK</fullName>
            </value>
            <value>
                <fullName>Yes, with BK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>